# justdd

./: .gitignore  MANIFEST.in  PKGBUILD  README.md  SECURITY.md  app.py  constants.py  pyproject.toml  styles.py  update_checker.py
.github/workflows/: README.md  arch-package.yml  build-packages.yml  debian-package.yml  fedora-package.yml  publish-pypi.yml
docs/: CNAME  index.html  script.js  styles.css
docs/fun-stuff/: source.sh
justdd/: __init__.py  __main__.py  app.py  constants.py
justdd/gui/: __init__.py  about_widget.py  icons.py  logs_window.py  main_window.py  pages.py  step_card.py
justdd/logic/: __init__.py  flash_job.py  flash_worker.py  iso_detector.py  logs.py  message_utils.py  steps.py  utils.py
packaging/build-scripts/: build-all.sh  build-deb.sh  build-rpm.sh  common.sh  example-workflow.sh  handle-polkit.sh  test-installation.sh
packaging/debian/: control  justdd.desktop  rules
packaging/rpm/: com.github.xxanqw.justdd.policy  justdd.spec
tests/: smoke_test.py
widgets/: about_widget.py  custom_message_box.py  distro_config.py  download_worker.py  iso_downloader_widget.py  logs_window.py  step_card.py  sync_widget.py  utils.py
widgets/fetchers/: __init__.py  arch_fetcher.py  debian_fetcher.py  endeavouros_fetcher.py  fedora_fetcher.py  mint_fetcher.py  opensuse_fetcher.py  ubuntu_fetcher.py
