[project]
name = "justdd"
version = "0.1.0"
description = "A simple, open-source tool to write Linux and Windows ISO images to USB drives."
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "PySide6",
    "requests",
    "beautifulsoup4",
    "desktop-notifier>=6.1.1",
    "aiohttp>=3.12.11",
]

[project.optional-dependencies]
dev = [
    "pyinstaller"
]
