[project]
name = "justdd"
version = "0.1.4-2"
description = "A simple, open-source tool to write Linux and Windows ISO images to USB drives."
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "PySide6",
    "requests",
    "beautifulsoup4",
    "desktop-notifier>=6.1.1",
    "aiohttp>=3.12.11",
]

[project.optional-dependencies]
dev = [
    "pyinstaller"
]

[project.scripts]
justdd = "app:main"

[tool.setuptools]
packages = ["widgets", "widgets.fetchers"]
py-modules = ["app", "styles", "update_checker", "constants"]

[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"
