[project]
name = "justdd"
version = "0.1.5-2"
description = "A simple, open-source tool to write Linux and Windows ISO images to USB drives."
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "pyside6",
    "requests",
    "beautifulsoup4",
    "desktop-notifier",
    "aiohttp",
    "qtawesome"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "xxanqw" },
]
maintainers = [
    { name = "Ivan Potiienko", email = "contact@xxanqw.pp.ua" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: X11 Applications :: Qt",
]
keywords = ["usb", "dd", "iso", "image-writer", "flashing", "justdd"]
urls = { "Homepage" = "https://github.com/xxanqw/justdd" }

[project.optional-dependencies]
dev = [
    "pyinstaller"
]

[project.scripts]
justdd = "justdd.app:main"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"
